examples/test/testpolicy14081.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14081
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key45: value38
      key29: value36
      key34: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value47
          key31: value47
          key39: value7
      podSelector:
        matchLabels:
          key33: value8
          key10: value36
          key40: value14
